[ci skip] 40043405073 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/14287074590/job/40043405073

--- a/locale/ja/LC_MESSAGES/packages.po
+++ b/locale/ja/LC_MESSAGES/packages.po
@@ -6218,7 +6218,7 @@ msgstr ""
 msgid ""
 "Sympy documentation and packages for installation can be found on "
 "https://www.sympy.org/"
-msgstr ""
+msgstr "Sympy のドキュメントとインストール用パッケージは https://www.sympy.org/ にあります。"
 
 #: ../../scientific-python-lectures/packages/sympy.rst:38
 msgid "First Steps with SymPy"
