[ci skip] 40362227896 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/14392501519/job/40362227896

--- a/locales/ja/LC_MESSAGES/advanced.po
+++ b/locales/ja/LC_MESSAGES/advanced.po
@@ -1017,7 +1017,7 @@ msgstr ""
 #: ../../scientific-python-lectures/advanced/image_processing/index.rst:219
 #: ../../scientific-python-lectures/advanced/mathematical_optimization/index.rst-1
 msgid "**Exercise**"
-msgstr ""
+msgstr "**例題**"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:696
 msgid "using only ``as_strided``.::"
